assets/css/index.css
h1,
h2,
h3,
h4,
h5,
h6,
p {
	margin: 0;
	padding: 0;
}

a:active,
a:hover {
	outline: 0;
}

html {
	width: 100%;
	height: 100%;
	min-height: 100%;
	font-family: sans-serif;
	-webkit-text-size-adjust: 100%;
}

body {
	overflow-x: hidden;
	width: 100%;
	min-width: 300px;
	height: 100%;
	min-height: 100%;
	margin: 0;
	padding: 0;
	color: #fff;
	background: #21272f;
	/* font-family: 'Helvetica Neue', Helvetica, sans-serif; */
	font-family: 'Montserrat', sans-serif;
	font-size: 100%;
	font-weight: 400;
	-webkit-font-smoothing: antialiased;
}

a:link,
a:visited {
	text-decoration: none;
	color: #fff;
}

img {
	width: auto;
	max-width: 100%;
	height: auto;
}

p {
	margin-bottom: 10px;
	font-size: 18px;
	line-height: 1.6;
}

.responsive {
	width: 100%;
}

@media only screen and (min-width: 767px) {
	.responsive {
		width: 50%;
	}
}

.sep {
	display: block;
	clear: both;
	width: 100%;
	height: 2px;
	margin: 15px 0;
	background: rgba(255, 255, 255, 0.1);
}

@media only screen and (min-width: 767px) {
	.sep {
		margin-top: 0;
	}
}

.primary-btn {
	padding: 15px;
	text-transform: uppercase;
	color: rgba(255, 255, 255, 0.5);
	border: 2px solid rgba(255, 255, 255, 0.6);
	border-radius: 3px;
	font-size: 15px;
	font-weight: 500;
}

.primary-btn:hover {
	transition: all 0.1s ease-in-out;
	color: #21272f;
	background: #fff;
	box-shadow: 0 4px 20px 2px rgba(0, 0, 0, 0.2);
}

.container {
	display: block;
	overflow: hidden;
	box-sizing: border-box;
	width: 100%;
	max-width: 900px;
	margin: 0 auto;
	padding: 15px;
}

@media only screen and (min-width: 767px) {
	.container {
		padding: 35px;
	}
}

.intro-container {
	position: relative;
	z-index: 10;
	width: 100%;
	margin-top: 30px;
	margin-bottom: 70px;
	text-align: center;
}

@media only screen and (min-width: 767px) {
	.intro-container {
		float: left;
		width: 42%;
		margin-bottom: 0;
		text-align: left;
	}
}

.app-store-btn::before {
	padding-right: 8px;
	content: '';
	font-size: 16px;
}

.app-icon {
	width: 90px;
	margin: 0 auto;
	filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.1));
	-webkit-filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.1));
}

.app-icon p {
	font-size: 35px;
	font-weight: 200;
	white-space: nowrap;
}

@media only screen and (min-width: 767px) {
	.app-icon {
		margin: 0;
	}

	.app-icon p {
		margin-left: 2px;
	}
}

.intro {
	max-width: 300px;
	margin-top: 13%;
	margin-right: auto;
	margin-bottom: 40px;
	margin-left: auto;
}

@media only screen and (min-width: 767px) {
	.intro {
		max-width: 100%;
		margin-top: 28%;
		margin-bottom: 40px;
	}
}

.intro h2 {
	margin-bottom: 20px;
	font-size: 18px;
	font-weight: 200;
	line-height: 1.2;
}

@media only screen and (min-width: 580px) {
	.intro h2 {
		font-size: 20px;
	}
}

.iphone {
	position: relative;
	margin: 0 auto;
	padding-bottom: 20%;
}

@media only screen and (min-width: 767px) {
	.iphone {
		float: right;
		width: 100%;
		max-width: 357px;
		height: 100%;
		text-align: right;
		padding-bottom: 10%;
	}
}

.iphone-screenshot {
	position: relative;
	z-index: 100;
	overflow: hidden;
	width: 87.5%;
	height: 0;
	margin: 0 auto;
	padding-bottom: 182%;
}

@media only screen and (min-width: 767px) {
	.iphone-screenshot {
		z-index: 999;
		width: 88%;
	}
}

.iphone-screenshot img {
	position: absolute;
	top: 13.88%;
	left: 0;
}

.iphone-screenshot iframe {
	position: absolute;
	top: 13.88%;
	left: 4px;
    width: 98%;
	max-width: 98%;
	height: 84.12%;
	z-index: 999;
}

.iphone-mask {
	position: absolute;
	z-index: 10;
	top: 0;
	left: 0;
	display: block;
	z-index: 998;
}

.footer {
	margin-bottom: 10px;
}

.footer p {
	opacity: 0.7;
}

.credit {
	float: right;
}

.credit a {
	float: right;
	opacity: 1;
}

.credit a:hover {
	text-decoration: underline;
}

.contact {
	float: left;
}

.contact span {
	color: rgba(255, 255, 255, 0.2);
	float: left;
}

.contact a {
	padding-right: 20px;
}

.contact a,
.contact a:visited {
	transition: opacity 0.5s ease-out;
	text-decoration: none;
	opacity: 0.7;
	color: #fff;
}

.contact a:hover,
.contact a:focus,
.contact a:visited:hover,
.contact a:visited:focus {
	opacity: 1;
}

@media only screen and (min-width: 767px) {
	.contact {
		text-align: right;
	}

	.contact a {
		padding-right: 0;
		padding-left: 12px;
	}
}

.use-app {
	margin-bottom: 20px;
}

.use-app h5 {
	font-weight: normal;
}

.store-btn img {
	max-width: 66%;
	padding: 10px 10px 10px 0;
}

